feat:java-up : jmps（ 运行成功后，夫工程运行有问题）